# okapi-em

./: .gitignore  LICENSE  README.md  pip_deploy.bat  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
initial/: FFTDirectionalFilter_WholeStack.ipynb  tests0.ipynb  tests2.ipynb  tests3.ipynb
samples/: SEM Image - SliceImage - 004 labelB.tif  chafer_example.ipynb  chafer_example_data.tif  chafer_example_data_chaferfiltered.tif  chafer_example_data_label.tif  post-chafer metric.ipynb
src/okapi_em/: __init__.py  _image_selector_dropdown.py  _widget.py  filters.py  measure_charging.py  napari.yaml  quoll_wrapper.py  slice_alignment.py
src/okapi_em/_tests/: test_slice_alignment.py  test_widget.py
