[metadata]
name = okapi-em
version = 0.0.8
author = Luis Perdigao
author_email = luis.perdigao@rfi.ac.uk

license = Apache-2.0
description = napari plugin to deal with charging artifacts in tomography electron microscopy data
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License


[options]
packages = find:
include_package_data = True
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy
    magicgui
    chafer
    napari[all]
    opencv-python # cv2 functions for slice-alignment
    quoll>=0.0.4
    #pyqt5 # not recommended https://napari.org/stable/plugins/best_practices.html#don-t-include-pyside2-or-pyqt5-in-your-plugin-s-dependencies
    qtpy

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    pytest-xvfb # required for CI linux tests
    pyqt5<5.15 # temp fix for compatibility with pytest

all =
    imageio-ffmpeg #annoyingly napari 1.4.14 needs this but is not installed unless specified

[options.packages.find]
where = src

[options.package_data]
* = *.yaml

[options.entry_points] 
napari.manifest = 
    okapi-em = okapi_em:napari.yaml
